# KiCad-Librarian

./: .gitignore  README.md  doxyfile  kicadlibrarian.desktop  kicadlibrarian.desktop.in  kicadlibrarian.xml
cmake/: Findlibcx3d.cmake  Findlibhpdf.cmake  Findlibhpdfs.cmake
doc/: NOTICE
font/: newstroke.cxf
src/: CMakeLists.txt  cxffont.cpp  cxffont.h  libmngr_dlgnewfootprint.cpp  libmngr_dlgnewfootprint.h  libmngr_dlgnewsymbol.cpp  libmngr_dlgnewsymbol.h  libmngr_dlgoptions.cpp  libmngr_dlgoptions.h  libmngr_dlgremotelink.cpp  libmngr_dlgremotelink.h  libmngr_dlgreport.cpp  libmngr_dlgreport.h  libmngr_dlgtemplate.cpp  libmngr_dlgtemplate.h  libmngr_frame.cpp  libmngr_frame.h  libmngr_gui_base.cpp  libmngr_gui_base.fbp  libmngr_gui_base.h  libmngr_paths.cpp  libmngr_paths.h  libraryfunctions.cpp  libraryfunctions.h  librarymanager.cpp  librarymanager.h  librarymanager.rc  pdfreport.cpp  pdfreport.h  remotelink.cpp  remotelink.h  rpn.cpp  rpn.h  svnrev.h  unqlite.c  unqlite.h  vrmlsupport.cpp  vrmlsupport.h
src/res/: ArrowLeft.png.h  ArrowLeft.xpm  ArrowRight.png.h  ArrowRight.xpm  Information.png.h  Information.xpm  Measure.png.h  Measure.xpm  TextLabel.xpm  View3D.png.h  View3D.xpm  ZoomIn.png.h  ZoomIn.xpm  ZoomOut.png.h  ZoomOut.xpm  logo32.xpm  logo64.xpm
template/: BGA.mt  BGA.vt  CAE.mt  CAE.vt  Chip.mt  Chip.vt  ChipPol.mt  ChipPol.vt  DIP.mt  DIP.vt  Dual-row.st  HDR1x_.mt  HDR1x_.vt  HDR1x_FrictionLock.vt  HDR1x_SMD.mt  HDR1x_SMD.vt  HDR2x_.mt  HDR2x_.vt  HDR2x_SMD.mt  HDR2x_SMD.vt  HDR2x_Shrouded.mt  HDR2x_Shrouded.vt  LED_Chip.mt  LED_Chip.vt  Level-shifter.st  MELF.mt  MELF.vt  MLD.mt  MLD.vt  MLDPOL.mt  MLDPOL.vt  OpAmp.st  QFN.mt  QFN.vt  QFNX.mt  QFP.mt  QFP.vt  QFPX.mt  Quad-row.st  SOD.mt  (+17 more)
